--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,14 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon",
+    "start": "NODE_PATH=./src node dist/index.js",
+    "scrape": "NODE_PATH=./src yarn ts-node src/scrape.ts",
+    "generate-migration": "yarn drizzle-kit generate:pg --schema=./src/models.ts",
+    "dev": "NODE_PATH=./src nodemon",
     "build": "yarn tsc"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "drizzle-kit": "^0.19.6",
@@ -20,6 +23,11 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "drizzle-orm": "^0.27.2"
+    "@types/pg": "^8.10.2",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.27.2",
+    "express": "^4.18.2",
+    "pg": "^8.11.1",
+    "puppeteer": "^20.8.2"
   }
 }
