--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,13 +9,10 @@
     "strict": true,
     "skipLibCheck": true,
     "rootDir": "./src",
-    "baseUrl": "./src",
-    "typeRoots": ["./node_modules/@types", "./@types"],
-    "composite": true
+    "baseUrl": "./src"
   },
   "ts-node": {
     "files": true
   },
-  "references": [],
   "include": ["src/**/*"]
 }
