--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "build": "yarn tsc"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.10.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.27.2",
     "express": "^4.18.2",
