--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,8 +8,7 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "rootDir": "./src",
-    "baseUrl": "./src"
+    "rootDir": "./src"
   },
   "ts-node": {
     "files": true
